# invoice-reminder

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: design-decisions.md
fixtures/: magazine_manager_ar_export_sample.csv  sample_invoices.json
integrations/n8n/: README.md  invoice-reminders.workflow.json
src/reminders/: __init__.py  approval.py  automation.py  cli.py  config.py  models.py  pipeline.py  policy.py  state.py  templates.py  tone.py
src/reminders/notifiers/: __init__.py  base.py  console.py  smtp.py
src/reminders/sources/: __init__.py  _qbo_client.py  base.py  csv_source.py  magazine_manager.py  mock.py  quickbooks_desktop.py  quickbooks_online.py
templates/: final.txt.j2  firm.txt.j2  friendly.txt.j2
tests/: conftest.py  test_approval.py  test_automation.py  test_batches.py  test_cold_start.py  test_config.py  test_cron_run.py  test_csv_source.py  test_dry_run_never_sends.py  test_idempotency.py  test_json_output.py  test_mock_source.py  test_models.py  test_notifiers.py  test_pipeline.py  test_policy.py  test_quickbooks_desktop.py  test_quickbooks_online.py  test_state.py  test_templates.py  test_tone.py
